--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name":"DADMARK",
-  "description":"Best whatsapp bot developed by POPKID",
+  "description":"Best whatsapp bot developed by DADMARK",
   "keywords":["bot","node","baileys","whatsapp"],
   "logo":"https://i.ibb.co/B2T7fph/IMG-20241203-WA0042.jpg",
   "repository":"https://github.com/dadmarkbashir-1/Dadmark--md",
