--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name":"DADMARK",
   "description":"Best whatsapp bot developed by DADMARK",
   "keywords":["bot","node","baileys","whatsapp"],
-  "logo":"https://i.ibb.co/B2T7fph/IMG-20241203-WA0042.jpg",
+  "logo":"https://files.catbox.moe/edoi8s.jpg",
   "repository":"https://github.com/dadmarkbashir-1/Dadmark--md",
   "succes_url":"/",
   "stack":"container",
@@ -42,7 +42,7 @@
      "BOT_MENU_LINKS" : {
     
       "description":"add one or many link for your bot menu  ; eg : url1,url2,url3.....",
-      "value":"https://i.ibb.co/B2T7fph/IMG-20241203-WA0042.jpg",
+      "value":"https://files.catbox.moe/edoi8s.jpg",
       "required":false
        
      },
